src/objects/Alumni__c.object
<CustomObject>
    <description>Temporary Object for Outbound Alumni Followup</description>
    <fields>
        <fullName>Client_Phone_Number_Updated__c</fullName>
        <description>This number is updated from BlueBook and more recent to the client.</description>
        <label>Client Phone Number Updated</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Discharge_Date__c</fullName>
        <description>Discharge date for Alumni</description>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Disposition</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <description>Emergency Contact Name</description>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <description>Emergency contact phone #</description>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <description>Which Facility the Alumni attended</description>
        <label>Facility</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Called__c</fullName>
        <description>The last time this person was called, does not designate they answered</description>
        <label>Last Called</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Contact_Phone_Number__c</fullName>
        <description>Phone number from Original contact to Admissions</description>
        <label>Original Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <description>Important Notes if applicable</description>
        <label>Other Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Payment type upon admission</description>
        <label>Payment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Alumni Temp</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Last_Called__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>April</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2020</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>4/30/2020</value>
        </filters>
        <label>Calen April</label>
    </listViews>
    <listViews>
        <fullName>August</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2020</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>8/31/2020</value>
        </filters>
        <label>Calen August</label>
    </listViews>
    <listViews>
        <fullName>Calen_December</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/1/2020</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/28/2020</value>
        </filters>
        <label>Calen December</label>
    </listViews>
    <listViews>
        <fullName>Calen_February_2019</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2019</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>2/28/2019</value>
        </filters>
        <label>Calen February 2019</label>
    </listViews>
    <listViews>
        <fullName>Calen_January</fullName>
        <columns>NAME</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Facility__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2020</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/31/2020</value>
        </filters>
        <label>Calen January</label>
    </listViews>
    <listViews>
        <fullName>Calen_January_2019</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/30/2019</value>
        </filters>
        <label>Calen January 2019</label>
    </listViews>
    <listViews>
        <fullName>Calen_March_2019</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2019</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2019</value>
        </filters>
        <label>Calen March 2019</label>
    </listViews>
    <listViews>
        <fullName>Calen_September</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>iCFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2020</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>9/30/2020</value>
        </filters>
        <label>Calen September</label>
    </listViews>
    <listViews>
        <fullName>February</fullName>
        <columns>NAME</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Facility__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2020</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>2/29/2020</value>
        </filters>
        <label>Calen February</label>
    </listViews>
    <listViews>
        <fullName>July</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/1/2020</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>7/31/2020</value>
        </filters>
        <label>Calen July</label>
    </listViews>
    <listViews>
        <fullName>June</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2020</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2020</value>
        </filters>
        <label>Calen June</label>
    </listViews>
    <listViews>
        <fullName>Justin_Alumni</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>notContain</operation>
            <value>ICFR</value>
        </filters>
        <label>Justin Alumni</label>
    </listViews>
    <listViews>
        <fullName>Katie_April</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>notEqual</operation>
            <value>ICFR</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2020</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>4/30/2020</value>
        </filters>
        <label>Katie April</label>
    </listViews>
    <listViews>
        <fullName>Katie_April_2019</fullName>
        <columns>NAME</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Facility__c</columns>
        <columns>Original_Contact_Phone_Number__c</columns>
        <columns>Client_Phone_Number_Updated__c</columns>
        <columns>Last_Called__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2019</value>
        </filters>
        <filters>
            <field>Discharge_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>4/30/2019</value>
        </filters>
        <filters>
            <field>Facility__c</field>
            <operation>notEqual</operation>
            <value>ICFR</value>
        </filters>
        <label>Katie April 2019</label>
    </listViews>
    <nameField>
        <label>Alumni  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alumni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>